--- a/frontend/src/app/features/restaurants/pages/restaurants-explore.component.html
+++ b/frontend/src/app/features/restaurants/pages/restaurants-explore.component.html
@@ -152,5 +152,9 @@
     </button>
 
   </div>
+<footer class="app-footer">
+  <h4>Descubre restaurantes</h4>
+  <p>Encuentra los mejores lugares para comer cerca de ti</p>
+</footer>
 
 </div>
