--- a/frontend/src/app/features/restaurants/pages/restaurants-owner.component.html
+++ b/frontend/src/app/features/restaurants/pages/restaurants-owner.component.html
@@ -70,7 +70,7 @@
         nz-button
         nzType="default"
         (click)="goToPosts(r.restaurantId); $event.stopPropagation()">
-        📢 Posts
+        📢 Pos
       </button>
 
     </div>
